@@ -1,4 +1,3 @@
-#import <UIKit/UIKit.h>
 #import "cocos2d.h"
 
 @class Label;
@@ -6,22 +5,11 @@
 //CLASS INTERFACE
 @interface AppController : NSObject <UIAccelerometerDelegate, UIAlertViewDelegate, UITextFieldDelegate, UIApplicationDelegate>
 {
-    UIWindow *window;
-}
-@property (nonatomic, retain) UIWindow *window;
-@end
-
-@interface SpriteLayer: Layer
-{
+	UIWindow	*window;
 }
 @end
 
-@interface TextLayer: Layer
-{
-}
-@end
 
 @interface MainLayer : Layer
-{
-}
+{}
 @end
