@@ -1,4 +1,3 @@
-#import <UIKit/UIKit.h>
 #import "cocos2d.h"
 
 @class Sprite;
