@@ -2,10 +2,7 @@
 // cocos2d
 //
 
-#import <UIKit/UIKit.h>
-
 #import "cocos2d.h"
-#import "chipmunk.h"
 
 //CLASS INTERFACE
 @interface AppController : NSObject <UIAlertViewDelegate, UITextFieldDelegate, UIApplicationDelegate>
@@ -16,9 +13,15 @@
 
 @interface Layer1 : Layer
 {
-	cpSpace *space;
-}
--(void) step: (ccTime) dt;
--(void) addNewSpriteX:(float)x y:(float)y;
-@end
+	Label *label1;
+	Label *label2;
+	Label *label3;
 	
+	ccTime time1, time2, time3;
+}
+
+-(void) step1: (ccTime) dt;
+-(void) step2: (ccTime) dt;
+-(void) step3: (ccTime) dt;
+
+@end
