@@ -1,5 +1,7 @@
 version 0.7.2 - xxx
  . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
+ . Demos: organized tests folder (issue #280)
+ . Director: Attach uses 'bounds' not 'frame' (issue #233)
  . Menu: an empty menu can be crated (issue #277)
  . Particles: Use by default fire.pvr (issue #276)
  . Particles: resetSystem actually resets the system (issue #252)
